--- a/src/input.css
+++ b/src/input.css
@@ -57,14 +57,14 @@ cursor: pointer;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    
 }
 
 .box {
     animation: loader 1s infinite;
-    background-color: #374151;
-    width: 50px;
-    height: 50px;
-    color: #00136c;
+   background-color:#2d3748 ;
+    width: 35px;
+    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
