--- a/public/output.css
+++ b/public/output.css
@@ -581,6 +581,10 @@ video {
   }
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -642,12 +646,16 @@ video {
   top: 50%;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .top-3 {
   top: 0.75rem;
 }
 
-.top-32 {
-  top: 8rem;
+.top-36 {
+  top: 9rem;
 }
 
 .top-4 {
@@ -670,16 +678,16 @@ video {
   top: 20rem;
 }
 
-.top-36 {
-  top: 9rem;
-}
-
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .z-\[80\] {
@@ -762,6 +770,10 @@ video {
   height: 300px;
 }
 
+.h-\[35rem\] {
+  height: 35rem;
+}
+
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -786,6 +798,10 @@ video {
 
 .max-h-\[300px\] {
   max-height: 300px;
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .w-10 {
@@ -893,6 +909,10 @@ video {
 
 .list-disc {
   list-style-type: disc;
+}
+
+.list-none {
+  list-style-type: none;
 }
 
 .grid-cols-1 {
@@ -1007,6 +1027,14 @@ video {
   overflow: hidden;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1032,8 +1060,16 @@ video {
   border-bottom-left-radius: 3rem;
 }
 
+.rounded-bl-lg {
+  border-bottom-left-radius: 0.5rem;
+}
+
 .rounded-br-lg {
   border-bottom-right-radius: 0.5rem;
+}
+
+.rounded-tl-lg {
+  border-top-left-radius: 0.5rem;
 }
 
 .rounded-tr-\[3rem\] {
@@ -1136,9 +1172,8 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+.bg-transparent {
+  background-color: transparent;
 }
 
 .p-6 {
@@ -1464,14 +1499,14 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1533,20 +1568,26 @@ input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
 }
 
-.custom-scrollbar::-webkit-scrollbar {
-  width: 10px;
+/* .custom-scrollbar::-webkit-scrollbar {
+    width: 10px;
+ 
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color:#374151;
-  border-radius: 10px;
-  border: 3px solid transparent;
-  background-clip: content-box;
+    background-color:#374151;
+
+    border-radius: 10px;
+   
+    border: 3px solid transparent;
+  
+    background-clip: content-box;
+    
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background-color: transparent;
-}
+    background-color: transparent;
+    
+} */
 
 .sticky-button-container {
   position: -webkit-sticky;
@@ -1634,11 +1675,6 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
@@ -1667,39 +1703,14 @@ input[type="search"]::-webkit-search-cancel-button {
   transition-duration: 150ms;
 }
 
-.focus\:bg-gray-300:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.focus\:bg-gray-800:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.focus\:bg-gray-600:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
 .focus\:bg-gray-900:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.focus\:text-gray-700:focus {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
 .focus\:text-gray-200:focus {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.focus\:placeholder\:text-gray-700:focus::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .focus\:placeholder\:text-gray-200:focus::placeholder {
@@ -1864,6 +1875,10 @@ input[type="search"]::-webkit-search-cancel-button {
     right: 1.75rem;
   }
 
+  .lg\:top-36 {
+    top: 9rem;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -1874,6 +1889,10 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-\[30rem\] {
+    height: 30rem;
   }
 
   .lg\:w-\[1000px\] {
@@ -1960,8 +1979,16 @@ input[type="search"]::-webkit-search-cancel-button {
     top: 5%;
   }
 
+  .sl\:mr-\[-17px\] {
+    margin-right: -17px;
+  }
+
   .sl\:max-w-\[1200px\] {
     max-width: 1200px;
+  }
+
+  .sl\:bg-transparent {
+    background-color: transparent;
   }
 
   .sl\:px-0 {
