--- a/src/input.css
+++ b/src/input.css
@@ -21,7 +21,7 @@ input[type="search"]::-webkit-search-cancel-button {
 cursor: pointer;
 }
 
-.custom-scrollbar::-webkit-scrollbar {
+/* .custom-scrollbar::-webkit-scrollbar {
     width: 10px;
  
 }
@@ -40,7 +40,7 @@ cursor: pointer;
 .custom-scrollbar::-webkit-scrollbar-track {
     background-color: transparent;
     
-}
+} */
 
 .sticky-button-container {
     position: sticky;
@@ -69,6 +69,7 @@ cursor: pointer;
     justify-content: center;
     align-items: center;
 }
+
 
 .empty-cart-container {
     position: absolute;
